--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             </div>
                             <h4 class="py-3">10rb/100COIN</h4>
                             <div class="my-3">
-                                <a class="btn" href="https://wa.me/+6287832819932?text=Bang Beli Coin dong" >INFO LEBIH</a>
+                                <a class="btn" href="https://wa.me/6287832819932?text=Bang Beli Coin dong" >INFO LEBIH</a>
                             </div>
                         </div>  
                     </div>
