--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!-- <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> -->
 
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text" href="index.html">ZenityLand</a>
+            <a class="navbar-brand logo-text" href="https://www.youtube.com/channel/UC1MKp32b9TzLuLyRGuxg2RA">ZenityLand</a>
 
             <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
                         </a>
                     </span>
                     <span class="fa-stack">
-                        <a href="#your-link">
+                        <a href="https://Instagram.com/ronizyenk?igshid=YmMyMTA2M2Y=">
                             <i class="fas fa-circle fa-stack-2x"></i>
                             <i class="fab fa-instagram fa-stack-1x"></i>
                         </a>
@@ -170,7 +170,7 @@
             <div class="row gy-4 py-2" data-aos="zoom-in">
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
-                        <i class="fas fa-home fa-2x"></i>
+                        <i class="fas fa-warehouse fa-2x"></i>
                         <h4 class="py-2">SURVIVAL </h4>
                         <p class="para-light">Survival Bersama Teman,Dapatkan banyak Uang dan Bertempur Bersama Clan</p>
                     </div>
@@ -184,28 +184,21 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
-                        <i class="fas fa-phone fa-2x"></i>
-                        <h4 class="py-2">CHAT/CONTACT</h4>
-                        <p class="para-light">kamu bisa saling chat di server dengan banyak sekali rank sebagai perantaranya</p>
-                    </div>                    
-                </div>
-                <div class="col-lg-4">
-                    <div class="card bg-transparent">
                         <i class="fas fa-mobile fa-2x"></i>
-                        <h4 class="py-2">DEVICE</h4>
-                        <p class="para-light">Kamu bisa bermain dengan jenis device apa aja bahkan PC sekalipun(emulator)</p>
+                        <h4 class="py-2">SOSIAL MEDIA</h4>
+                        <p class="para-light">Server Zenity Land Mempunyai Whatsapp,Instagram,Youtube</p>
                     </div>                    
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
-                        <i class="fas fa-home fa-2x"></i>
+                        <i class="fas fa-shopping-cart fa-2x"></i>
                         <h4 class="py-2">SHOP</h4>
                         <p class="para-light">Kamu Bisa memeli barang barang di shop zenity (/x./shop./shopui./cs)</p>
                     </div>                    
                 </div>
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
-                        <i class="fas fa-tv fa-2x"></i>
+                        <i class="fas fa-globe-africa fa-2x"></i>
                         <h4 class="py-2">FULL FITUR</h4>
                         <p class="para-light">Banyak sekali Fitur Lainnnya seperti Mob di Server Jadi Join sekarang</p>
                     </div>                    
@@ -246,7 +239,7 @@
                             </div>
                             <h4 class="py-3">10rb/100COIN</h4>
                             <div class="my-3">
-                                <a class="btn" href="https://wa.me/6287832819932?text=Bang Beli Coin dong" >INFO LEBIH</a>
+                                <a class="btn" href="https://wa.me/087832819932?text=Bang Beli Coin dong" >INFO LEBIH</a>
                             </div>
                         </div>  
                     </div>
@@ -258,6 +251,7 @@
 
 
     <!-- Work -->
+    
     <!-- end Work -->
 
     <!-- Testimonials -->
@@ -288,12 +282,7 @@
                     <p class="py-3 para-light">Laman Resmi Zenity Team <br>IP:play.zenityland.site <br>PORT:19132 </p>
                     <div class="d-flex">
                         <div class="me-3">
-                            <a href="#your-link">
-                                <i class="fab fa-facebook-f fa-2x py-2"></i>
-                            </a>
-                        </div>
-                        <div class="me-3">
-                            <a href="#your-link">
+                            <a href="https://Instagram.com/ronizyenk?igshid=YmMyMTA2M2Y=">
                                 <i class="fab fa-instagram fa-2x py-2"></i>
                             </a>
                         </div>
@@ -306,28 +295,6 @@
                             <a href="http://bit.ly/1GrubZenityLand">
                                 <i class="fab fa-whatsapp fa-2x py-2"></i>
                             </a>
-                        </div>
-                    </div>
-                </div> <!-- end of col -->
-
-                <div class="col-lg-3 py-4 py-md-5">
-                    <div>
-                        <h4 class="py-2">Quick Links</h4>
-                        <div class="d-flex align-items-center py-2">
-                            <i class="fas fa-caret-right"></i>
-                            <a href="#about"><p class="ms-3">About</p></a>
-                        </div>
-                        <div class="d-flex align-items-center py-2">
-                            <i class="fas fa-caret-right"></i>
-                            <a href="#"><p class="ms-3">Services</p></a>
-                        </div>
-                        <div class="d-flex align-items-center py-2">
-                            <i class="fas fa-caret-right"></i>
-                            <a href="#"><p class="ms-3">Plans</p></a>
-                        </div>
-                        <div class="d-flex align-items-center py-2">
-                            <i class="fas fa-caret-right"></i>
-                            <a href="#"><p class="ms-3">Contact</p></a>
                         </div>
                     </div>
                 </div> <!-- end of col -->
